--- a/Missions_to_Mars/NASA_Mars_News.ipynb
+++ b/Missions_to_Mars/NASA_Mars_News.ipynb
@@ -288,7 +288,7 @@
     "# Examine the results, then determine element that contains sought info\n",
     "# results are returned as an iterable list\n",
     "news_titles = soup.find_all(class_='slide')\n",
-    "brower.quit()"
+    "browser.quit()"
    ]
   },
   {
@@ -309,8 +309,8 @@
     "# find the title and body\n",
     "news_title = news_titles[0].find(class_='content_title').text\n",
     "article_body = news_titles[0].find(class_=\"article_teaser_body\").text\n",
-    "print(news_title)\n",
-    "print(article_body)"
+    "print(f\"news_title : {news_title}\")\n",
+    "print(f\"article_body : {article_body}\")"
    ]
   },
   {
