--- a/Missions_to_Mars/Jupyter_Files/mission_to_mars.ipynb
+++ b/Missions_to_Mars/Jupyter_Files/mission_to_mars.ipynb
@@ -71,7 +71,7 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "# Examine the results, then determine element that contains sought info\n",
     "# results are returned as an iterable list\n",
-    "news_titles = soup.find_all(class_='slide')"
+    "news_titles = soup.find(class_='slide')"
    ]
   },
   {
@@ -83,17 +83,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "news_title : NASA's Ingenuity Mars Helicopter Succeeds in Historic First Flight\n",
-      "article_body : The small rotorcraft made history, hovering above Jezero Crater, demonstrating that powered, controlled flight on another planet is possible.\n"
+      "news_title : NASA's Perseverance Mars Rover Extracts First Oxygen From Red Planet\n",
+      "news_p : The milestone, which the MOXIE instrument achieved by converting carbon dioxide into oxygen, points the way to future human exploration of the Red Planet. \n"
      ]
     }
    ],
    "source": [
     "# find the news title and body\n",
-    "news_title = news_titles[0].find(class_='content_title').text\n",
-    "article_body = news_titles[0].find(class_=\"article_teaser_body\").text\n",
+    "news_title = news_titles.find(class_='content_title').text\n",
+    "news_p = news_titles.find(class_=\"article_teaser_body\").text\n",
     "print(f\"news_title : {news_title}\")\n",
-    "print(f\"article_body : {article_body}\")"
+    "print(f\"news_p : {news_p}\")"
    ]
   },
   {
@@ -325,8 +325,8 @@
    "source": [
     "# use the first table, change column names\n",
     "df=tables[0]\n",
-    "df_output=df.rename(columns={0: \"Description\", 1: \"Mars Values\"})\n",
-    "df_output"
+    "mars_facts_table=df.rename(columns={0: \"Description\", 1: \"Mars Values\"})\n",
+    "mars_facts_table"
    ]
   },
   {
@@ -336,7 +336,7 @@
    "outputs": [],
    "source": [
     "# convert to html\n",
-    "df_output.to_html(\"pd_mars_facts.html\",index=False)"
+    "mars_facts_table.to_html(\"mars_facts_table.html\",index=False)"
    ]
   },
   {
@@ -400,6 +400,7 @@
       "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg\n",
       "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg\n",
       "https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg\n",
+      "--------------------------------------------------------------\n",
       "[{'title': 'Cerberus Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]\n"
      ]
     }
@@ -417,12 +418,42 @@
     "    img_url=soup.find('div',class_='downloads').ul.li.a['href']\n",
     "    print(img_url)\n",
     "    hemisphere_image_urls.append({\"title\": title, \"img_url\": img_url})\n",
+    "\n",
+    "print(\"--------------------------------------------------------------\")\n",
     "print(hemisphere_image_urls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'news_title': \"NASA's Perseverance Mars Rover Extracts First Oxygen From Red Planet\", 'news_p': 'The milestone, which the MOXIE instrument achieved by converting carbon dioxide into oxygen, points the way to future human exploration of the Red Planet. ', 'featured_image_url': 'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24603.width-1024.jpg', 'mars_facts_table':             Description                    Mars Values\n",
+      "0  Equatorial Diameter:                       6,792 km\n",
+      "1       Polar Diameter:                       6,752 km\n",
+      "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+      "3                Moons:            2 (Phobos & Deimos)\n",
+      "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+      "5         Orbit Period:           687 days (1.9 years)\n",
+      "6  Surface Temperature:                   -87 to -5 °C\n",
+      "7         First Record:              2nd millennium BC\n",
+      "8          Recorded By:           Egyptian astronomers, 'hemisphere_image_urls': [{'title': 'Cerberus Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mars_data={\"news_title\":news_title, \"news_p\":news_p,\"featured_image_url\":featured_image_url,\"mars_facts_table\":mars_facts_table,\n",
+    "            \"hemisphere_image_urls\":hemisphere_image_urls}\n",
+    "print(mars_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
