remove print from scrape_mars

--- a/Missions_to_Mars/Jupyter_Files/mission_to_mars.ipynb
+++ b/Missions_to_Mars/Jupyter_Files/mission_to_mars.ipynb
@@ -143,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "featured_image_url: https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24603.width-1024.jpg\n"
+      "featured_image_url: https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24439.width-1024.jpg\n"
      ]
     }
    ],
@@ -325,8 +325,8 @@
    "source": [
     "# use the first table, change column names\n",
     "df=tables[0]\n",
-    "mars_facts_table=df.rename(columns={0: \"Description\", 1: \"Mars Values\"})\n",
-    "mars_facts_table"
+    "mars_facts_table_df=df.rename(columns={0: \"Description\", 1: \"Mars Values\"})\n",
+    "mars_facts_table_df"
    ]
   },
   {
@@ -336,7 +336,37 @@
    "outputs": [],
    "source": [
     "# convert to html\n",
-    "mars_facts_table.to_html(\"mars_facts_table.html\",index=False)"
+    "mars_facts_table_df.to_html(\"mars_facts_table.html\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Description': 'Equatorial Diameter:', 'Mars Values': '6,792 km'},\n",
+       " {'Description': 'Polar Diameter:', 'Mars Values': '6,752 km'},\n",
+       " {'Description': 'Mass:', 'Mars Values': '6.39 × 10^23 kg (0.11 Earths)'},\n",
+       " {'Description': 'Moons:', 'Mars Values': '2 (Phobos & Deimos)'},\n",
+       " {'Description': 'Orbit Distance:', 'Mars Values': '227,943,824 km (1.38 AU)'},\n",
+       " {'Description': 'Orbit Period:', 'Mars Values': '687 days (1.9 years)'},\n",
+       " {'Description': 'Surface Temperature:', 'Mars Values': '-87 to -5 °C'},\n",
+       " {'Description': 'First Record:', 'Mars Values': '2nd millennium BC'},\n",
+       " {'Description': 'Recorded By:', 'Mars Values': 'Egyptian astronomers'}]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add table content into a list of dictionaries\n",
+    "mars_facts_table=mars_facts_table_df.to_dict('records')\n",
+    "mars_facts_table"
    ]
   },
   {
@@ -425,23 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'news_title': \"NASA's Perseverance Mars Rover Extracts First Oxygen From Red Planet\", 'news_p': 'The milestone, which the MOXIE instrument achieved by converting carbon dioxide into oxygen, points the way to future human exploration of the Red Planet. ', 'featured_image_url': 'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24603.width-1024.jpg', 'mars_facts_table':             Description                    Mars Values\n",
-      "0  Equatorial Diameter:                       6,792 km\n",
-      "1       Polar Diameter:                       6,752 km\n",
-      "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
-      "3                Moons:            2 (Phobos & Deimos)\n",
-      "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
-      "5         Orbit Period:           687 days (1.9 years)\n",
-      "6  Surface Temperature:                   -87 to -5 °C\n",
-      "7         First Record:              2nd millennium BC\n",
-      "8          Recorded By:           Egyptian astronomers, 'hemisphere_image_urls': [{'title': 'Cerberus Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}\n"
+      "{'news_title': \"NASA's Perseverance Mars Rover Extracts First Oxygen From Red Planet\", 'news_p': 'The milestone, which the MOXIE instrument achieved by converting carbon dioxide into oxygen, points the way to future human exploration of the Red Planet. ', 'featured_image_url': 'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24439.width-1024.jpg', 'mars_facts_table': [{'Description': 'Equatorial Diameter:', 'Mars Values': '6,792 km'}, {'Description': 'Polar Diameter:', 'Mars Values': '6,752 km'}, {'Description': 'Mass:', 'Mars Values': '6.39 × 10^23 kg (0.11 Earths)'}, {'Description': 'Moons:', 'Mars Values': '2 (Phobos & Deimos)'}, {'Description': 'Orbit Distance:', 'Mars Values': '227,943,824 km (1.38 AU)'}, {'Description': 'Orbit Period:', 'Mars Values': '687 days (1.9 years)'}, {'Description': 'Surface Temperature:', 'Mars Values': '-87 to -5 °C'}, {'Description': 'First Record:', 'Mars Values': '2nd millennium BC'}, {'Description': 'Recorded By:', 'Mars Values': 'Egyptian astronomers'}], 'hemisphere_image_urls': [{'title': 'Cerberus Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}\n"
      ]
     }
    ],
@@ -453,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
